:sparkles: Added action

--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,22 @@
-name: 'Wait'
-description: 'Wait a designated number of milliseconds'
+name: "Terraform Output Fetcher"
+description: "Fetch outputs from a terraform workspace"
 inputs:
-  milliseconds:  # id of input
-    description: 'number of milliseconds to wait'
+  host:
+    description: "host for self-hosted terraform cloud"
     required: true
-    default: '1000'
+    default: "app.terraform.io"
+  organization:
+    description: "organization on terraform cloud"
+    required: true
+  workspace:
+    description: "workspace on terraform cloud"
+    required: true
+  token:
+    description: "team token for terraform cloud"
+    required: true
 outputs:
-  time: # output will be available to future steps
-    description: 'The current time after waiting'
+  outputs:
+    description: "The outputs of the terraform stack"
 runs:
-  using: 'node16'
-  main: 'dist/index.js'
+  using: "node16"
+  main: "dist/index.js"
